sys-cluster/teleport: enable all services by default

--- a/sys-cluster/teleport/files/teleport.yaml
+++ b/sys-cluster/teleport/files/teleport.yaml
@@ -44,7 +44,7 @@ teleport:
 # This section configures the 'auth service':
 auth_service:
     # Turns 'auth' role on. Default is 'yes'
-    enabled: no
+    enabled: yes
 
     # Turns on dynamic configuration. Dynamic configuration defines the source
     # for configuration information, configuration files on disk or what's
@@ -98,7 +98,7 @@ auth_service:
 # This section configures the 'node service':
 ssh_service:
     # Turns 'ssh' role on. Default is 'yes'
-    enabled: no
+    enabled: yes
 
     # IP and the port for SSH service to bind to. 
     listen_addr: 0.0.0.0:3022
@@ -120,7 +120,7 @@ ssh_service:
 # This section configures the 'proxy servie'
 proxy_service:
     # Turns 'proxy' role on. Default is 'yes'
-    enabled: no
+    enabled: yes
 
     # SSH forwarding/proxy address. Command line (CLI) clients always begin their
     # SSH sessions by connecting to this port
